# ChangeLog for media-gfx/fontforge
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.106 2009/04/09 04:48:28 vapier Exp $

*fontforge-20090408 (09 Apr 2009)

  09 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20090408.ebuild:
  Version bump.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> fontforge-20081224-r1.ebuild:
  stable ppc, bug 260288

  15 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  fontforge-20081224-r1.ebuild:
  arm/ia64/s390/sh stable wrt #260288

  08 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  fontforge-20081224-r1.ebuild:
  Stable on alpha, bug #260288

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  fontforge-20081224-r1.ebuild:
  amd64/x86 stable, bug #260288

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> fontforge-20081224-r1.ebuild:
  Stable for HPPA (bug #260288).

  02 Mar 2009; Brent Baude <ranger@gentoo.org> fontforge-20081224-r1.ebuild:
  stable ppc64, bug 260288

*fontforge-20090224 (25 Feb 2009)

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20090224.ebuild:
  Version bump.

  25 Feb 2009; Ferris McCormick <fmccor@gentoo.org>
  fontforge-20081224-r1.ebuild:
  Sparc stable, Bug #260288.

*fontforge-20081224-r1 (21 Jan 2009)

  21 Jan 2009; Peter Volkov <pva@gentoo.org> +files/fontforge-desktop.patch,
  metadata.xml, +fontforge-20081224-r1.ebuild:
  New USE flags: tilepath, pasteafter, type3 they are not useful for most
  users (based on feedback from upstream, thank you George Williams);
  truetype-debugger (makes possible build ff with truetype debugger), doc
  (install offline documentation), debug (useful for developers of ff) and
  cjk (make ff understand gb12345 encoding and install cidmaps). Updated
  cidmaps, fixes bug #236829, thank Yu Yuwei for report. Fix .desktop file,
  bug 249463, thank Ulrich Müller for report. Install mime file and update
  fdo databases for desktop and mime.
